k8s/overlays/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/cors-allow-origin: https://sts.medialab.sciences-po.fr https://sts-bo.medialab.sciences-po.fr
spec:
  rules:
  - host: sts.medialab.sciences-po.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 80
  - host: sts-bo.medialab.sciences-po.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: bo
            servicePort: 80
